tests/compile-fail/stack_bare.stderr
error: #[stack] requires arguments, e.g., #[stack(location)]
 --> tests/compile-fail/stack_bare.rs:7:5
  |
7 |     #[stack]
  |     ^
